--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,10 @@
     outline: none;
     box-shadow: none;
   }
+
+ #ApplicationForm{
+    display: none;
+}
+  #GraduateClearance{
+      display: none;
+  }
